clusters/dextek/apps/monitoring/alloy/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  namespace: monitoring
  annotations:
spec:
  hostnames:
    - alloy.plexuz.xyz
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: alloy
          port: 12345
